# daiso-cli

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: ARCHITECTURE.md
src/daiso_cli/: __init__.py  client.py  main.py  models.py
src/daiso_cli/commands/: __init__.py  search.py
tests/: conftest.py  test_client.py  test_models.py
tests/test_commands/: test_search.py
