[project]
name = "daiso-cli"
version = "2026.02.28"
description = "다이소몰 상품 검색 CLI 도구"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "rich>=14.0.0",
    "scrapling[fetchers]>=0.2.0",
]

[project.scripts]
daiso = "daiso_cli.main:app"
daiso-cli = "daiso_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daiso_cli"]

[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
